# icgv-assignments-2526

./: .gitignore  AGENT.md  create_submission.sh  icgv-assignment.md
.themis/: project.json
icgv-volumetric-ray-tracer/: CMakeLists.txt  README.md  build.sh
icgv-volumetric-ray-tracer/scenes/01_ambient/: 1.json
icgv-volumetric-ray-tracer/scenes/02_diffuse/: 1.json
icgv-volumetric-ray-tracer/scenes/03_multilights/: 1.json
icgv-volumetric-ray-tracer/scenes/04_shadows/: 1.json
icgv-volumetric-ray-tracer/scenes/05_intersection/: 1.json
icgv-volumetric-ray-tracer/scenes/06_compositing/: 1.json  2.json
icgv-volumetric-ray-tracer/scenes/07_sampling/: 1.json  2.json  3.json  4.json  5.json  6.json
icgv-volumetric-ray-tracer/scenes/08_diffuse/: 1.json  2.json  3.json
icgv-volumetric-ray-tracer/scenes/09_shadows/: 1.json
icgv-volumetric-ray-tracer/scenes/10_integration/: 1.json
icgv-volumetric-ray-tracer/scenes/other/: bestagons.json  olympic-spheres.json  rgb-screen.json  rgb-sphere.json  scene01.json  scene02.json  spiral.json
icgv-volumetric-ray-tracer/src/: image.cpp  image.h  light.h  main.cpp  ray.h  raytracer.cpp  raytracer.h  scene.cpp  scene.h  triple.cpp  triple.h
icgv-volumetric-ray-tracer/src/datraw/: datraw.h
icgv-volumetric-ray-tracer/src/datraw/datraw/: convert.h  endianness.h  grid_type.h  half.h  info.h  info.inl  literal.h  parse.h  parse.inl  raw_reader.h  raw_reader.inl  scalar_type.h  string.h  types.h  variant.h  variant.inl
icgv-volumetric-ray-tracer/src/json/: json_wrapper.h
icgv-volumetric-ray-tracer/src/objects/: hit.h  material.h  object.h
icgv-volumetric-ray-tracer/src/volumes/: densityfield.cpp  densityfield.h  segment.h  transferfunction.cpp  transferfunction.h  volume.cpp  volume.h
(+3 files in other folders)
